--- a/MemoryMosaic/wwwroot/css/CollectionsMain.css
+++ b/MemoryMosaic/wwwroot/css/CollectionsMain.css
@@ -17,9 +17,7 @@ header {
 }
 
 header > #collectionsText {
-    font-size: 1.125rem;
-    font-weight: 400;
-    line-height: 1.5rem;
+    font-size: 20px;
     margin-left: 10px;
     margin-right: 40px;
 }
