Text in Backups, MissingFiles, and UntrackedFiles can no longer be selected

--- a/MemoryMosaic/wwwroot/css/maintenance/UntrackedFiles.css
+++ b/MemoryMosaic/wwwroot/css/maintenance/UntrackedFiles.css
@@ -1,4 +1,5 @@
 ﻿* {
+    user-select: none;
     scrollbar-width: none !important;
     --left-margin: 146px; /* For things with absolute positioning, how far to be away from left side of page */
 }
