--- a/MemoryMosaic/wwwroot/css/maintenance/Backups.css
+++ b/MemoryMosaic/wwwroot/css/maintenance/Backups.css
@@ -1,4 +1,5 @@
 * {
+    user-select: none;
     scrollbar-width: none !important;
     --left-margin: 146px; /* For things with absolute positioning, how far to be away from left side of page */
 }
