--- a/MemoryMosaic/Shared/Buttons/TextButton.razor
+++ b/MemoryMosaic/Shared/Buttons/TextButton.razor
@@ -1,8 +1,14 @@
+@* Button with an icon and text. *@
 @inherits Button
 
-@code {
+<link href="css/components/buttons/TextButton.css" rel="stylesheet"/>
 
+<button id="@Id" class="textBtn @Class" @onclick="@OnClick">
+	<span class="material-icons-outlined">@Icon</span>
+	<span>@Text</span>
+</button>
+
+@code {
 	[Parameter, EditorRequired]
 	public string Text { get; set; } = null!;
-
 }
