--- a/MemoryMosaic/_Imports.razor
+++ b/MemoryMosaic/_Imports.razor
@@ -8,4 +8,5 @@
 @using Microsoft.JSInterop
 @using MemoryMosaic
 @using MemoryMosaic.Shared
+@using MemoryMosaic.Shared.Buttons
 @using MemoryMosaic.Shared.Modal
