LCV.ClearChecks no longer returns a Task
LCV's (re)rendering process is going to get overhauled on the next feature branch so this is fine.

--- a/MemoryMosaic/Pages/LibraryContent/Trash.razor
+++ b/MemoryMosaic/Pages/LibraryContent/Trash.razor
@@ -146,7 +146,7 @@
                 await InvokeAsync(StateHasChanged);
             }
         }
-        await lcv.ClearChecks();
+        lcv.ClearChecks();
         restorePrompt.Disable();
         await InvokeAsync(StateHasChanged);
     }
@@ -190,7 +190,7 @@
                 await InvokeAsync(StateHasChanged);
             }
         }
-        await lcv.ClearChecks();
+        lcv.ClearChecks();
         delPrompt.Disable();
         await InvokeAsync(StateHasChanged);
     }
