--- a/MemoryMosaic/Shared/Buttons/TextButton.razor
+++ b/MemoryMosaic/Shared/Buttons/TextButton.razor
@@ -3,19 +3,20 @@
 
 <link href="css/components/buttons/TextButton.css" rel="stylesheet"/>
 
-<button id="@Id" class="textBtn @Class" @onclick="@OnClick" @Title>
+<button id="@ID" class="textBtn @Class" @onclick="@OnClick" title="@Title">
 	@if (Icon == "trash")
     {
     	<svg width="24px" height="24px" class="material-icons" viewBox="0 0 24 24"><path d="M15 4V3H9v1H4v2h1v13c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V6h1V4h-5zm2 15H7V6h10v13zM9 8h2v9H9zm4 0h2v9h-2z"></path></svg>
     }
 	else
     {
-    	<span class="material-icons-outlined">@Icon</span>
+    	<span class="material-icons-outlined" style="@IconStyle">@Icon</span>
     }
-	<span>@Text</span>
+	<span style="@TextStyle">@Text</span>
 </button>
 
 @code {
-	[Parameter, EditorRequired]
-	public string Text { get; set; } = null!;
+	[Parameter, EditorRequired] public string Text { get; set; } = null!;
+
+	[Parameter] public string? TextStyle { get; set; }
 }
