--- a/MemoryMosaic/Shared/Modal/CtrlGInput.razor
+++ b/MemoryMosaic/Shared/Modal/CtrlGInput.razor
@@ -8,8 +8,8 @@
 		
 		<div>
 			<input type="date" @bind="@NewStartDate"/>
-			<button class="iconBtn" @onclick="@(() => { Disable(); StartDateChanged.Invoke(); })"><span class="material-icons-outlined">check</span></button>
-			<button class="iconBtn" @onclick="@Disable"><span class="material-icons-outlined">close</span></button>
+			<IconButton Icon="check" OnClick="@(() => { Disable(); StartDateChanged.Invoke(); })"/>
+			<IconButton Icon="close" OnClick="@Disable"/>
 		</div>
 	</div>
 </ModalBackground>
